# QQ-Bot

./: .env.dev  .gitignore  README.md  getdomain.py  option.yml  pyproject.toml  requirements.txt
plugins/nonebot_plugin_jmdldr/: __init__.py  option.yml  utilities.py
src/plugins/: jmbot.py
