[project]
name = "QQ-Bot"
version = "0.1.0"
description = "QQ-Bot"
readme = "README.md"
requires-python = ">=3.11, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_status"]
plugin_dirs = ["plugins"]
builtin_plugins = []
